@startuml Diagrama de classes do PI

'left to right direction

class Personagem {
    idPersonagem: int
    informacoesGerais: map
    aparencia: map
    psique: map
    historia: map
    tags: Tag[]
    gruposTag: TagGroup[]

    editarInfo(info: string, value: string)
    buscarInfo(pagina: string)
}

class Projeto {
    idProjeto: int
    título: string
    síntese: string
    estilo: any
    tags: Tag[]
    gruposTag: TagGroup[]
}


class Nota {
    idNota: int
    título: string
    conteúdo: string
    cor: string
    idPastaPai: int?
    tags: Tag[]
    gruposTag: TagGroup[]
}

class Pasta {
    idPasta: int
    título: string
    cor: string
    idPastaPai: int?
}

class Tag {
    idTag: int
    descricao: string
    cor: string
    idGrupoTag: int?
}

class TagGroup {
    idGrupoTag: int
    descricao: string
    cor: string
}

interface Taggable {
    adicionarTag(ref objeto, tag)
    removerTag(ref objeto, tag)
}

Projeto --> Personagem: Possui
Projeto --> Pasta: Possui pasta raiz

Taggable <.. Projeto
Taggable <.. Personagem
Taggable <.. Nota

TagGroup -> Tag: Agrupa

Projeto --> TagGroup: Possui grupos

Personagem -> TagGroup: Possui grupos

Nota -> TagGroup: Possui grupos

Pasta --> Pasta: Contém
Pasta --> Nota: Contém

@enduml
